// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionListPageItem renders correctly 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          padding="x4"
        >
          <Base
            className="platformIconWrapper"
          >
            <Icon
              color="grape-4"
              name="PlatformsApple"
              size="1.5rem"
            />
          </Base>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x3"
            grow={true}
          >
            <Text
              className="title"
              color="grape-4"
              config="5"
            >
              My app v1.1.0 (28)
            </Text>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
        </Flex>
      </Link>
    </Link>
    <button
      className="descriptionWrapper"
      onClick={[Function]}
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        This is a short description about my 1. app. It is a good app. End of description.
      </Text>
      <Base
        className="showMore"
      >
        <Base
          className="text"
        >
          Show more
        </Base>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </button>
  </Base>
</Base>
`;

exports[`VersionListPageItem renders correctly for android 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          padding="x4"
        >
          <Base
            className="platformIconWrapper"
          >
            <Icon
              color="grape-4"
              name="PlatformsAndroid"
              size="1.5rem"
            />
          </Base>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x3"
            grow={true}
          >
            <Text
              className="title"
              color="grape-4"
              config="5"
            >
              My app v1.1.0 (28)
            </Text>
            <_default
              selected={true}
            >
              banana
            </_default>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
        </Flex>
      </Link>
    </Link>
    <button
      className="descriptionWrapper"
      onClick={[Function]}
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        This is a short description about my 1. app. It is a good app. End of description.
      </Text>
      <Base
        className="showMore"
      >
        <Base
          className="text"
        >
          Show more
        </Base>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </button>
  </Base>
</Base>
`;

exports[`VersionListPageItem shows more description 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          padding="x4"
        >
          <Base
            className="platformIconWrapper"
          >
            <Icon
              color="grape-4"
              name="PlatformsApple"
              size="1.5rem"
            />
          </Base>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x3"
            grow={true}
          >
            <Text
              className="title"
              color="grape-4"
              config="5"
            >
              My app v1.1.0 (28)
            </Text>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
        </Flex>
      </Link>
    </Link>
    <button
      className="descriptionWrapper isOpen"
      onClick={[Function]}
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        This is a short description about my 1. app. It is a good app. End of description.
      </Text>
      <Base
        className="showLess"
      >
        <Base
          className="text"
        >
          Show less
        </Base>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </button>
  </Base>
</Base>
`;
